<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorPrimary">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/shelter_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/ToolbarStyle"
            app:layout_scrollFlags="scroll|enterAlways|snap"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/shelter_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/shelter_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/shelter_nearby_container_location_failure_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shelter_container_location_failure_message"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_margin="32dp"/>

        <Button
            android:id="@+id/shelter_nearby_container_location_failure_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/shelter_container_location_failure_button"
            android:textColor="@color/textColorButtonRaised"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="52dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/shelter_container_zipcode_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shelter_container_location_failure_zipcode_entry_hint"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/shelter_container_zipcode_entry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/shelter_container_location_failure_zipcode_entry_button"
            android:textColor="@color/textColorButtonRaised"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shelter_container_location_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="invisible">

        <TextView
            android:id="@+id/shelter_container_location_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shelter_container_location_message"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_margin="32dp"/>

        <Button
            android:id="@+id/shelter_container_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/shelter_container_location_button"
            android:textColor="@color/textColorButtonRaised"/>

    </LinearLayout>

    <TextView
        android:id="@+id/shelter_empty_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/shelter_empty"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_margin="32dp"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/shelter_pagination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:indeterminate="true"
        android:layout_marginBottom="-6dp"
        android:visibility="gone"
        style="?android:attr/progressBarStyleHorizontal"/>

</android.support.design.widget.CoordinatorLayout>